--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 4000
-MONGO_URI = mongodb+srv://alendennis77:Alendennis1@ecommerceapp.mzltawp.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = "mongodb+srv://alendennis77:Alendennis1@ecommerceapp.mzltawp.mongodb.net/?retryWrites=true&w=majority"
